--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -36,4 +36,9 @@
   100% {
     transform: translateY(0px)
   }
+} */
+
+.container-fluid {
+
+  background-color: rgb(31, 31, 37);
 }
