--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,8 @@
+html {
+  background-color: rgb(31, 31, 37);
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
