--- a/client/src/components/Sandbox.css
+++ b/client/src/components/Sandbox.css
@@ -1,11 +1,24 @@
 .expected-output, .actual-output, .result-window {
-    margin-top: 50px;
+    margin-top: 20px;
     margin-inline: auto;
     padding: 10px;
     height: 300px;
     width: 80%;
     background-color: rgb(216, 216, 219);
     border-radius: 3px;
+}
+
+.expected-output {
+    font-size: 36px;
+}
+
+.solve-button {
+    width: 100%;
+}
+
+.btn {
+    margin: 10px;
+    margin-left: 200px;
 }
 
 .result-window {
